# voudp

./: .gitignore  Cargo.toml  NEW.txt  README.md  README.txt  TODO.md  client.sh  client_cli.sh  music.sh  server.sh
.github/workflows/: rust.yml
plugins/: core.d.lua  test.lua  welcome.lua
src/: client.rs  help.txt  main.rs  mixer.rs  music.rs  server.rs  util.rs
voudp/: Cargo.toml  README.txt
voudp-cli/: Cargo.toml
voudp-cli/src/: main.rs
voudp-console/: Cargo.toml
voudp-console/src/: main.rs
voudp-gui/: Cargo.toml
voudp-gui/src/: bubble.rs  main.rs
voudp/src/: client.rs  commands.rs  console_cmd.rs  help.txt  lib.rs  mixer.rs  music.rs  plugin.rs  protocol.rs  server.rs  socket.rs  util.rs
