[package]
name = "voudp"
version = "0.1.0"
edition = "2024"

[dependencies]
audiopus_sys = { version = "0.2.2", features = ["bindgen"] }
opus = "0.3.0"
libopus_sys = { version = "0.3.0", features = ["static"] }
cpal = "0.15"
anyhow = "1"
log = "0.4"
ringbuf = "0.4.8"
symphonia = "0.5.4"
chrono = "0.4.41"
chacha20poly1305 = "0.10.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"

# Platform-specific dependencies (optional, for more control)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }