[package]
name = "voudp"
version = "0.2.0"
edition = "2024"

[dependencies]
opus2 = "0.3.3"
cpal = "0.15"
anyhow = "1"
log = "0.4"
ringbuf = "0.4.8"
symphonia = { version = "0.4", features = ["mp3"]}
chrono = "0.4.41"
chacha20poly1305 = "0.10.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
thiserror = "2.0.18"
rand = "0.10.0"
mlua = { version = "0.9", features = ["lua54", "vendored", "send"]}

# Platform-specific dependencies (optional, for more control)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
